FINALLY FIXED THE OVERSIZED BODY WITH ON MOBILE!!! :muscle: :muscle: :punch:

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -221,6 +221,7 @@ body, html {
     .g-logo {
         width: 100% !important;
         opacity: 1 !important;
+        margin-left: 0 !important;
     }
     
     .g-logo svg {
